--- a/templates/partials/dashboard-base.html
+++ b/templates/partials/dashboard-base.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SaroPay - Money Transfer and Online Payments Dashboard HTML Template</title>
+    <title>Paylio - Money Transfer and Online Payments Dashboard HTML Template</title>
 
-    <link rel="shortcut icon" href="{% static 'assets11/images/fav.png' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets1/images/fav.png' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'assets1/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets1/css/fontawesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets1/css/jquery-ui.css' %}">
@@ -39,6 +39,7 @@
                             <img src="{% static 'assets1/images/icon/menu.png' %}" alt="icon">
                         </div>
                         <form method="POST" class="flex-fill">
+                            {% csrf_token %}
                             
                             <div class="form-group d-flex align-items-center">
                                 <img src="{% static 'assets1/images/icon/search.png' %}" alt="icon">
@@ -66,48 +67,23 @@
                                 <div class="main-area notifications-content">
                                     <div class="head-area d-flex justify-content-between">
                                         <h5>Notifications</h5>
-                                        <span class="mdr">{{ notifications.count }}</span>
+                                        <span class="mdr">4</span>
                                     </div>
                                     <ul>
-                                        {% for n in notifications %}
                                         <li>
-                                            
                                             <a href="javascript:void(0)" class="d-flex">
+                                                <div class="img-area">
+                                                    <img src="{% static 'assets1/images/user-1.png' %}" class="max-un" alt="image">
+                                                </div>
                                                 <div class="text-area">
-                                                    
-                                                    {% if n.notification_type == "Credit Alert" %}
-                                                    <p class="mdr">You received a payment of <b>${{n.amount}}</b></p>
-                                                    {% endif %}
-                                                    {% if n.notification_type == "Debit Alert" %}
-                                                    <p class="mdr">You sent a payment of <b>${{n.amount}}</b></p>
-                                                    {% endif %}
-                                                    {% if n.notification_type == "Sent Payment Request" %}
-                                                    <p class="mdr">You sent a <b>payment request</b> of <b>${{n.amount}}</b></p>
-                                                    {% endif %}
-                                                    {% if n.notification_type == "Recieved Payment Request" %}
-                                                    <p class="mdr">You received a <b>payment request</b> of <b>${{n.amount}}</b></p>
-                                                    {% endif %}
-                                                    {% if n.notification_type == "Funded Credit Card" %}
-                                                    <p class="mdr">You funded your credit card with <b>${{n.amount}}</b></p>
-                                                    {% endif %}
-                                                    {% if n.notification_type == "Withdrew Credit Card Funds" %}
-                                                    <p class="mdr">You withdrew <b>${{n.amount}}</b> from your credit card</p>
-                                                    {% endif %}
-                                                    {% if n.notification_type == "Deleted Credit Card" %}
-                                                    <p class="mdr">You deleted your credit card</p>
-                                                    {% endif %}
-                                                    {% if n.notification_type == "Added Credit Card" %}
-                                                    <p class="mdr">You added a new  credit card</p>
-                                                    {% endif %}
-                                                        
-                                                    <p class="mdr time-area">{{n.date}}</p>
+                                                    <p class="mdr">You received a payment of <b>$134.00</b> from <b>Anna
+                                                            Green</b></p>
+                                                    <p class="mdr time-area">09.39AM</p>
                                                 </div>
                                             </a>
                                             <i class="fa-solid fa-caret-right"></i>
                                         </li>
-                                        {% endfor %}
-
-                                        <!-- <li>
+                                        <li>
                                             <a href="javascript:void(0)" class="d-flex">
                                                 <div class="img-area">
                                                     <img src="{% static 'assets1/images/user-2.png' %}" class="max-un" alt="image">
@@ -140,60 +116,41 @@
                                                     <img src="{% static 'assets1/images/user-3.png' %}" class="max-un" alt="image">
                                                 </div>
                                                 <div class="text-area">
-                                                    <p class="mdr">You received a payment of <b>$250.00</b> from Goerge
-                                                        Michael</p>
+                                                    <p class="mdr">You received a payment of <b>$250.00</b> from Goerge Michael
+                                                    </p>
                                                     <p class="mdr time-area">Yesterday</p>
                                                 </div>
                                             </a>
                                             <i class="fa-solid fa-caret-right"></i>
-                                        </li> -->
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="single-item user-area">
                                 <div class="profile-area d-flex align-items-center">
                                     <span class="user-profile">
-                                        <!-- <img src="{% static 'assets1/images/avatar.png' %}" alt="User"> -->
-                                        {% if request.user.kyc.image.url %}
-                                            <img style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;" src="{{ request.user.kyc.image.url }}" alt="image">
-                                        {% else %}
-                                            <img src="{% static 'assets1/images/default.jpg' %}"  style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" alt="">
-                                        {% endif %}
-                                    <!-- <img style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;" src="{{ kyc.image.url }}" alt="image"> -->
-
+                                        <img src="{% static 'assets1/images/avatar.png' %}" alt="User">
                                     </span>
                                     <i class="fa-solid fa-sort-down"></i>
                                 </div>
                                 <div class="main-area user-content">
                                     <div class="head-area d-flex align-items-center">
                                         <div class="profile-img">
-                                            <!-- <img src="{% static 'assets1/images/avatar-2.png' %}" alt="User"> -->
-                                            
-                                            {% if request.user.kyc.image.url %}
-                                            <img style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;" src="{{ request.user.kyc.image.url }}" alt="image">
-                                            {% else %}
-                                            <img src="{% static 'assets1/images/default.jpg' %}"  style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" alt="">
-                                            {% endif %}
-                                                
-
+                                            <img src="{% static 'assets1/images/avatar-2.png' %}" alt="User">
                                         </div>
                                         <div class="profile-head">
-                                            <a href="{% url 'account:account' %}">
-                                                <h5>{{kyc.full_name|title}}</h5>
+                                            <a href="javascript:void(0)">
+                                                <h5>Kevin Martin</h5>
                                             </a>
-                                            <p class="wallet-id"><small>Account No. {{ request.user.account.account_number }}</small></p>
-                                            <p class="wallet-id"><small>Pin No. {{ request.user.account.pin_number }}</small></p>
+                                            <p class="wallet-id">Wallet ID: 6264849965</p>
                                         </div>
                                     </div>
                                     <ul>
                                         <li class="border-area">
-                                            <a href="{% url 'account:dashboard' %}"><i class="fas fa-user"></i>Dashboard</a>
-                                        </li>
-                                        <li class="border-area">
-                                            <a href="javascript:void(0)"><i class="fas fa-cog"></i>Settings</a>
+                                            <a href="account.html"><i class="fas fa-cog"></i>Settings</a>
                                         </li>
                                         <li>
-                                            <a href="{% url 'userauths:sign-out' %}"><i class="fas fa-sign-out"></i>Logout</a>
+                                            <a href="javascript:void(0)"><i class="fas fa-sign-out"></i>Logout</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -205,26 +162,26 @@
                             <i class="fa-solid fa-xmark"></i>
                         </div>
                         <div class="sidebar-logo">
-                            <a href="{% url 'account:dashboard' %}"><img src="{% static 'assets1/images/logo.png' %}" alt="logo"></a>
+                            <a href="dashboard.html"><img src="{% static 'assets1/images/logo.png' %}" alt="logo"></a>
                         </div>
                         <ul>
                             <li>
-                                <a href="{% url 'account:dashboard' %}">
+                                <a href="dashboard.html">
                                     <img src="{% static 'assets1/images/icon/dashboard.png' %}" alt="Dashboard"> <span>Dashboard</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'core:transactions' %}">
+                                <a href="transactions.html">
                                     <img src="{% static 'assets1/images/icon/transactions.png' %}" alt="Transactions"> <span>Transactions</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'core:search-account' %}">
+                                <a href="pay.html">
                                     <img src="{% static 'assets1/images/icon/pay.png' %}" alt="Pay"> <span>Pay</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'core:request-search-account' %}">
+                                <a href="receive-step-1.html">
                                     <img src="{% static 'assets1/images/icon/receive.png' %}" alt="Receive"> <span>Receive</span>
                                 </a>
                             </li>
@@ -256,7 +213,7 @@
                         </ul>
                         <ul class="bottom-item">
                             <li class="active">
-                                <a href="{% url 'account:account' %}">
+                                <a href="account.html">
                                     <img src="{% static 'assets1/images/icon/account.png' %}" alt="Account"> <span>Account</span>
                                 </a>
                             </li>
@@ -284,33 +241,11 @@
                 </div>
             </div>
         </div>
-        <!-- alert start -->
-        
-        {% if messages %}
-            {% for m in messages %}
-            <div class="alert alert-{{m.tags}}">
-                <strong>{{m}}</strong>
-            </div>
-            {% endfor %}
-        {% endif %}
-        <script>
-            setTimeout (() => {
-                $(".alert").alert("close");
-            }, 4000)
-        </script>
-        
-        <!-- alert end -->
-        
-
     </header>
     <!-- header-section end -->
-
-
 {% block content %}
-  
-{% endblock content %}
 
-    
+{% endblock content %}
     <!--==================================================================-->
     <script src="{% static 'assets1/js/jquery.min.js' %}"></script>
     <script src="{% static 'assets1/js/bootstrap.min.js' %}"></script>
