--- a/templates/partials/dashboard-base.html
+++ b/templates/partials/dashboard-base.html
@@ -129,25 +129,29 @@
                             <div class="single-item user-area">
                                 <div class="profile-area d-flex align-items-center">
                                     <span class="user-profile">
-                                        <img src="{% static 'assets1/images/avatar.png' %}" alt="User">
+                                        <img style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;" src="{{ kyc.image.url }}" alt="image">
                                     </span>
                                     <i class="fa-solid fa-sort-down"></i>
                                 </div>
                                 <div class="main-area user-content">
                                     <div class="head-area d-flex align-items-center">
                                         <div class="profile-img">
-                                            <img src="{% static 'assets1/images/avatar-2.png' %}" alt="User">
+                                            <img style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover;" src="{{ kyc.image.url }}" alt="image">
                                         </div>
                                         <div class="profile-head">
-                                            <a href="javascript:void(0)">
-                                                <h5>Kevin Martin</h5>
+                                            <a href="{% url 'core_apps.account:account' %}">
+                                                <h5>{{ kyc.full_name|title }}</h5>
                                             </a>
-                                            <p class="wallet-id">Wallet ID: 6264849965</p>
+                                            <p class="wallet-id"><small>Account No. {{account.account_number}}</small></p>
+                                            <p class="wallet-id"><small>Pin No. {{account.pin_number}}</small></p>
                                         </div>
                                     </div>
                                     <ul>
                                         <li class="border-area">
-                                            <a href="account.html"><i class="fas fa-cog"></i>Settings</a>
+                                            <a href="/admin"><i class="fas fa-user"></i>Admin</a>
+                                        </li>
+                                        <li class="border-area">
+                                            <a href="{% url 'core_apps.account:account' %}"><i class="fas fa-cog"></i>Settings</a>
                                         </li>
                                         <li>
                                             <a href="javascript:void(0)"><i class="fas fa-sign-out"></i>Logout</a>
@@ -213,7 +217,7 @@
                         </ul>
                         <ul class="bottom-item">
                             <li class="active">
-                                <a href="account.html">
+                                <a href="{% url 'core_apps.account:account' %}">
                                     <img src="{% static 'assets1/images/icon/account.png' %}" alt="Account"> <span>Account</span>
                                 </a>
                             </li>
@@ -241,6 +245,14 @@
                 </div>
             </div>
         </div>
+        <!-- alert start -->
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{message.tags}}">
+            <strong>{{ message }}</strong>
+        </div>
+        {% endfor %}
+        {% endif %}
     </header>
     <!-- header-section end -->
 {% block content %}
