--- a/templates/transfer/search-user-account-number.html
+++ b/templates/transfer/search-user-account-number.html
@@ -63,7 +63,7 @@
                                 </div>
                             </div>
                             <div class="right">
-                                <a href="javascript:void(0)">Choose</a>
+                                <a href="{% url 'core_apps.core:amount-transfer' a.account_number %}">Choose</a>
                             </div>
                         </div>
                         
