--- a/templates/transfer/amount-transfer.html
+++ b/templates/transfer/amount-transfer.html
@@ -42,11 +42,12 @@
                             </div>
                         </div>
                     </div>
-                    <form action="">
+                    <form action="{% url 'core_apps.core:amount-transfer-process' account.account_number %}" method="POST">
+                        {% csrf_token %}
                         <div class="send-banance">
                             <span class="mdr">You Send</span>
                             <div class="input-area">
-                                <input class="xxlr" onkeyup="CalculateBalance()" placeholder="{{ request.user.account.account_balance|intcomma }}" type="number" id="amount-send">
+                                <input class="xxlr" onkeyup="CalculateBalance()" placeholder="{{ request.user.account.account_balance|intcomma }}" type="number" name="amount-send" id="amount-send">
                                 <select>
                                     <option value="1">USD</option>
                                     <option value="2">USD</option>
@@ -57,6 +58,14 @@
                             <p>Available Balance<b>${{ request.user.account.account_balance|intcomma }}</b></p>
                             <p id="new_balance"></p>
                             <p class="text-danger" id="error-div">Error</p>
+                        </div>
+
+                        <div class="send-banance pt-0 mt-0">
+                            <span class="mdr">Payment Description</span>
+                            <div class="input-area">
+                                <input class="xxlr" onkeyup="CalculateBalance()" placeholder="eg. Payment for rent" type="text" name="description">
+                            
+                            </div>
                         </div>
                         <script>
                             function CalculateBalance(){
@@ -98,7 +107,7 @@
                         </ul>
                         <div class="footer-area mt-40">
                             <a href="pay-step-1.html">Previous Step</a>
-                            <a href="pay-step-3.html" class="active">Next</a>
+                            <button type="submit" class="active" style="padding: 10px 30px; border-radius: 10px; background: blue; color: #fff;">Next</button>
                         </div>
                     </form>
                 </div>
