Feat: Add payment request functionality

--- a/templates/partials/dashboard-base.html
+++ b/templates/partials/dashboard-base.html
@@ -185,7 +185,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="receive-step-1.html">
+                                <a href="{% url 'core_apps.core:request-search-account' %}">
                                     <img src="{% static 'assets1/images/icon/receive.png' %}" alt="Receive"> <span>Receive</span>
                                 </a>
                             </li>
