--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -6,6 +6,11 @@
     <section class="dashboard-section body-collapse">
         <div class="overlay pt-120">
             <div class="container-fruid">
+                {% if form.errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ form.errors }}</strong>
+                </div>
+                {% endif %}
                 <div class="row">
                     <div class="col-xl-8 col-lg-7">
                         <div class="section-content">
@@ -331,49 +336,65 @@
                                             <button type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                                 <img src="{% static 'assets1/images/icon/option.png' %}" alt="icon">
                                             </button>
-                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                                <li><a class="dropdown-item" href="account.html">Update</a></li>
-                                                <li><a class="dropdown-item" href="javascript:void(0)">Virtual card</a></li>
-                                            </ul>
+                                            
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-6">
-                                        <div class="single-card">
-                                            <button type="button" class="reg w-100" data-bs-toggle="modal" data-bs-target="#cardMod">
-                                                <img src="{% static 'assets1/images/visa-card.png' %}" alt="image" class="w-100">
-                                            </button>
-                                        </div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="single-card">
-                                            <button type="button" class="reg w-100" data-bs-toggle="modal" data-bs-target="#cardMod">
-                                                <img src="{% static 'assets1/images/paylio-card.png' %}" alt="image" class="w-100">
-                                            </button>
-                                        </div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="single-card">
-                                            <button type="button" class="reg w-100" data-bs-toggle="modal" data-bs-target="#cardMod">
-                                                <img src="{% static 'assets1/images/paypal-card.png' %}" alt="image" class="w-100">
-                                            </button>
-                                        </div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="single-card">
-                                            <button type="button" class="reg w-100" data-bs-toggle="modal" data-bs-target="#cardMod">
-                                                <img src="{% static 'assets1/images/blockchain-card.png' %}" alt="image" class="w-100">
-                                            </button>
-                                        </div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="single-card">
-                                            <button type="button" class="reg w-100" data-bs-toggle="modal" data-bs-target="#addcardMod">
-                                                <img src="{% static 'assets1/images/add-new.png' %}" alt="image" class="w-100">
-                                            </button>
-                                        </div>
-                                    </div>
+                                    {% for c in credit_card %}
+                                        <a href="{% url 'core_apps.core:card-detail' c.card_id %}">
+                                            <div class="col-12">
+                                                <div class="card__main">
+                                                    <div class="{% if c.card_type == 'verve' %}Front_card{% endif %}    {% if c.card_type == 'master' %}masterCard{% endif %}    {% if c.card_type == 'visa' %}visaCard{% endif %}">
+                                                    <div class="top_card">
+                                                        <span class="visa">{{c.card_type|upper}}</span>
+                                                        <div class="logo">
+                                                            <img src="{% static 'assets1/images/logo.png' %}" class="logo" alt="logo">
+
+                                                        </div>
+                                                    </div>
+                                                    <div class="middle_card">
+                                                        <span class="chip"></span>
+                                                        <div class="card_number">{{c.number}}</div>
+                                                    </div>
+                                                    <div class="bottom_card">
+                                                        <div class="card_info">
+                                                        <div class="card_holder_name">${{c.amount|intcomma}}</div>
+                                                        <div class="card_holder_name">{{c.name}}</div>
+                                                        </div>
+                                                        <div class="card_info">
+                                                        <div class="card_holder_info">
+                                                            <span class="expire_month" >{{c.month}}</span>
+                                                            <span class="slash">/</span>
+                                                            <span class="expire_year">{{c.year}}</span>
+                                                        </div>
+                                                        </div>
+                                                    </div>
+                                                    </div>
+                                                    <div class="back_card">
+                                                    <div class="top_card">
+                                                        <span class="black_strip"></span>
+                                                        <div class="cvc_strip">
+                                                        <span class="cvc_number">000</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="bottom_card">
+                                                        <div class="flex">
+                                                        <span class="sticker"></span>
+                                                        <div class="logo1">
+                                                            <span></span>
+                                                            <span></span>
+                                                            <span></span>
+                                                        </div>
+                                                        </div>
+                                                    </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    {% endfor %}
+
+
                                 </div>
                             </div>
                             <div class="single-item">
@@ -596,35 +617,43 @@
                                     <h6>Add Card</h6>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-xmark"></i></button>
                                 </div>
-                                <form action="#">
+                                <form method="POST">
+                                    {% csrf_token %}
                                     <div class="row justify-content-center">
+                                    
                                         <div class="col-md-12">
                                             <div class="single-input">
                                                 <label for="cardNumber">Card Number</label>
-                                                <input type="text" id="cardNumber" placeholder="5890 - 6858 - 6332 - 9843">
-                                            </div>
+                                                {{ form.number }}                                              </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="single-input">
                                                 <label for="cardHolder">Card Holder</label>
-                                                <input type="text" id="cardHolder" placeholder="Alfred Davis">
-                                            </div>
+                                                {{ form.name }}                                              </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="single-input">
                                                 <label for="month">Month</label>
-                                                <input type="text" id="month" placeholder="12">
-                                            </div>
+                                                {{ form.month }}                                              </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="single-input">
                                                 <label for="year">Year</label>
-                                                <input type="text" id="year" placeholder="2025">
-                                            </div>
+                                                {{ form.year }}                                              </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="single-input">
+                                                <label for="cardHolder">CVV</label>
+                                                {{ form.cvv }}                                              </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="single-input">
+                                                <label for="cardHolder">Card Type</label>
+                                                {{ form.card_type }}                                              </div>
                                         </div>
                                         <div class="col-12">
                                             <div class="btn-border w-100">
-                                                <button class="cmn-btn w-100">Add Card</button>
+                                                <button type="submit" class="cmn-btn w-100">Add Card</button>
                                             </div>
                                         </div>
                                     </div>
