Feat: Done implementing Credit Card

--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -394,6 +394,14 @@
                                         </a>
                                     {% endfor %}
 
+                                    <div class="col-4">
+                                        <div class="single-card">
+                                            <button type="button" class="reg w-100" data-bs-toggle="modal" data-bs-target="#addcardMod">
+                                                <img src="{% static 'assets1/images/add-new.png' %}" alt="image" class="w-100">
+                                            </button>
+                                        </div>
+                                    </div>
+
 
                                 </div>
                             </div>
