--- a/templates/account/account.html
+++ b/templates/account/account.html
@@ -191,7 +191,7 @@
                                             </div>
                                             <div class="col-md-12">
                                                 <div class="btn-border">
-                                                    <button class="cmn-btn">Edit KYC</button>
+                                                    <a href="{% url 'core_apps.account:kyc-reg' %}" class="cmn-btn">Edit KYC</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -337,7 +337,7 @@
                                             </div>
                                             <div class="single-card">
                                                 <button type="button" class="reg w-100" data-bs-toggle="modal" data-bs-target="#transactionsMod">
-                                                    <img src="{% static 'assets1/images/paylio-card.png' %}" alt="image" class="w-100">
+                                                    <img src="{% static 'assets1/images/SaroPay-card.png' %}" alt="image" class="w-100">
                                                 </button>
                                             </div>
                                             <div class="single-card">
@@ -495,7 +495,7 @@
                                                     <span>5880 **** **** 8854</span>
                                                 </div>
                                                 <a href="javascript:void(0)">
-                                                    <i class="icon-h-edit"></i>
+                                                    
                                                     Edit
                                                 </a>
                                             </div>
