--- a/templates/transaction/transaction-detail.html
+++ b/templates/transaction/transaction-detail.html
@@ -20,7 +20,7 @@
                                                     <div class="modal-content">
                                                         <div class="modal-header justify-content-between">
                                                             <h5>Transaction Details</h5>
-                                                            <a href="{% url 'core_apps.account:dashboard' %}"><i class="material-symbols-outlined">arrow_back</i></a>
+                                                            <a href="{% url 'core_apps.account:dashboard' %}"><i class="material-symbols-outlined"><img src="{% static 'assets/images/icon/left-arrow.png' %}" alt="icon"></i></a>
                                                         </div>
                                                         <div class="main-content">
                                                             <div class="row">
