--- a/templates/transfer/search-user-account-number.html
+++ b/templates/transfer/search-user-account-number.html
@@ -8,9 +8,7 @@
                 <div class="main-content">
                     <div class="head-area d-flex align-items-center justify-content-between">
                         <h4>Make a Payment</h4>
-                        <div class="icon-area">
-                            <img src="{% static 'assets1/images/icon/support-icon.png' %}" alt="icon">
-                        </div>
+                       
                     </div>
                     <!-- <div class="choose-recipient">
                         <div class="step-area">
@@ -74,10 +72,10 @@
                         {% endfor %}
                         {% endif %}
                     </div>
-                    <div class="footer-area mt-40">
+                    <!-- <div class="footer-area mt-40">
                         <a href="pay.html">Previous Step</a>
                         <a href="pay-step-2.html" class="active">Next</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
