--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,11 +1,11 @@
 /*============================================ 
-# Template Name: Paylio 
+# Template Name: SaroPay 
 # Version: 1.0
 # Date: 26/04/2022
 # Author: pixelaxis
 # Author URI: https://themeforest.net/user/pixelaxis/portfolio
 # Developed By: Pranto
-# Description: Paylio - Money Transfer and Online Payments HTML Template
+# Description: SaroPay - Money Transfer and Online Payments 
 ============================================*/
 
 /*============================================ 
