--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -25,18 +25,9 @@
                                         <div class="right-top">
                                             <select>
                                                 <option value="1">US Dollar</option>
-                                                <option value="2">US Dollar</option>
-                                                <option value="3">US Dollar</option>
+                                                
                                             </select>
-                                            <div class="dropdown-area">
-                                                <button type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                                    <img src="{% static 'assets1/images/icon/option.png' %}" alt="icon">
-                                                </button>
-                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                                    <li><a class="dropdown-item" href="#">Fiat Currency</a></li>
-                                                    <li><a class="dropdown-item" href="#">crypto Currency</a></li>
-                                                </ul>
-                                            </div>
+                                            
                                         </div>
                                         <!-- <div class="right-bottom">
                                             <h4>$30,700.00</h4>
@@ -47,8 +38,7 @@
                                 <div class="bottom-area">
                                     <div class="left-side">
                                         <a href="{% url 'core_apps.core:search-account' %}" class="cmn-btn">Transfer Money</a>
-                                        <a href="deposit-money.html" class="cmn-btn">Add Money</a>
-                                        <a href="withdraw-money-step-1.html" class="cmn-btn">Withdraw</a>
+                                        <a href="{% url 'core_apps.core:request-search-account' %}" class="cmn-btn">Request Payment</a>
                                     </div>
                                     <div class="right-side">
                                         <div class="dropdown-area">
@@ -419,69 +409,7 @@
                                 </div>
                                 <div id="chart"></div>
                             </div>
-                            <div class="single-item">
-                                <div class="section-text d-flex align-items-center justify-content-between">
-                                    <h6>Recipients</h6>
-                                    <div class="view-all d-flex align-items-center">
-                                        <a href="javascript:void(0)">View All</a>
-                                        <img src="{% static 'assets1/images/icon/right-arrow.png' %}" alt="icon">
-                                    </div>
-                                </div>
-                                <ul class="recipients-item">
-                                    <li>
-                                        <p class="left d-flex align-items-center">
-                                            <img src="{% static 'assets1/images/recipients-1.png' %}" alt="icon">
-                                            <span class="info">
-                                                <span>Phil King</span>
-                                            <span>08:00 AM — 19 August</span>
-                                            </span>
-                                        </p>
-                                        <p class="right">
-                                            <span> +$345</span>
-                                            <span>Payment</span>
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p class="left d-flex align-items-center">
-                                            <img src="{% static 'assets1/images/recipients-2.png' %}" alt="icon">
-                                            <span class="info">
-                                                <span>Debra Wilson</span>
-                                            <span>08:00 AM — 19 August</span>
-                                            </span>
-                                        </p>
-                                        <p class="right">
-                                            <span class="loss">-$850</span>
-                                            <span>Refund</span>
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p class="left d-flex align-items-center">
-                                            <img src="{% static 'assets1/images/recipients-3.png' %}" alt="icon">
-                                            <span class="info">
-                                                <span>Philip Henry</span>
-                                            <span>08:00 AM — 19 August</span>
-                                            </span>
-                                        </p>
-                                        <p class="right">
-                                            <span>+$2.050</span>
-                                            <span>Payment</span>
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p class="left d-flex align-items-center">
-                                            <img src="{% static 'assets1/images/recipients-4.png' %}" alt="icon">
-                                            <span class="info">
-                                                <span>Erin Garcia</span>
-                                            <span>08:00 AM — 19 August</span>
-                                            </span>
-                                        </p>
-                                        <p class="right">
-                                            <span> +$900</span>
-                                            <span>Payment</span>
-                                        </p>
-                                    </li>
-                                </ul>
-                            </div>
+                          
                         </div>
                     </div>
                 </div>
@@ -507,7 +435,7 @@
                                             <img src="{% static 'assets1/images/visa-card-2.png' %}" alt="image">
                                         </div>
                                         <div class="text-area">
-                                            <h5>Paylio payment Card </h5>
+                                            <h5>SaroPay payment Card </h5>
                                             <p>Linked: 01 Jun 2021</p>
                                         </div>
                                     </div>
@@ -581,7 +509,7 @@
                                         <div class="tab-pane fade" id="cancel" role="tabpanel" aria-labelledby="cancel-tab">
                                             <div class="main-area">
                                                 <div class="transfer-area">
-                                                    <p>Set a transfer limit for paylio payment Card</p>
+                                                    <p>Set a transfer limit for SaroPay payment Card</p>
                                                     <p class="mdr">Transfer Limit</p>
                                                 </div>
                                                 <form action="#">
