--- a/templates/credit_detail/credit-detail.html
+++ b/templates/credit_detail/credit-detail.html
@@ -170,7 +170,7 @@
                                     </div>
                                     <div class="col-md-12">
                                         <div class="single-input">
-                                            <label for="month">Paylio Available Balance</label>
+                                            <label for="month">SaroPay Available Balance</label>
                                             <input type="text" id="month" value="${{ account.account_balance|intcomma }}">
                                         </div>
                                     </div>
