--- a/templates/payment_request/search-users.html
+++ b/templates/payment_request/search-users.html
@@ -8,9 +8,7 @@
                 <div class="main-content">
                     <div class="head-area d-flex align-items-center justify-content-between">
                         <h4>Request Payment</h4>
-                        <div class="icon-area">
-                            <img src="{% static 'assets1/images/icon/support-icon.png' %}" alt="icon">
-                        </div>
+                        
                     </div>
                     <form class="flex-fill" method="POST">
                         {% csrf_token %}
@@ -47,10 +45,10 @@
                         {% endfor %}
                         {% endif %}
                     </div>
-                    <div class="footer-area mt-40">
+                    <!-- <div class="footer-area mt-40">
                         <a href="pay.html">Previous Step</a>
                         <a href="pay-step-2.html" class="active">Next</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
