--- a/templates/transfer/amount-transfer.html
+++ b/templates/transfer/amount-transfer.html
@@ -10,9 +10,7 @@
                 <div class="main-content">
                     <div class="head-area d-flex align-items-center justify-content-between">
                         <h4>Make a Payment</h4>
-                        <div class="icon-area">
-                            <img src="{% static 'assets1/images/icon/support-icon.png' %}" alt="icon">
-                        </div>
+                        
                     </div>
                     <div class="choose-recipient">
                         <div class="step-area">
@@ -35,7 +33,7 @@
                                 <div class="right">
                         
                                     <a href="{% url 'core_apps.core:search-account' %}">
-                                        <i class="icon-h-edit"></i>
+                                        
                                         Edit
                                     </a>
                                 </div>
@@ -47,7 +45,7 @@
                         <div class="send-banance">
                             <span class="mdr">You Send</span>
                             <div class="input-area">
-                                <input class="xxlr" onkeyup="CalculateBalance()" placeholder="{{ request.user.account.account_balance|intcomma }}" type="number" name="amount-send" id="amount-send">
+                                <input class="xxlr" onkeyup="CalculateBalance()" placeholder="{{ request.user.account.account_balance|intcomma }}" type="number" name="amount-send" id="amount-send" required>
                                 <select>
                                     <option value="1">USD</option>
                                     <option value="2">USD</option>
@@ -63,7 +61,7 @@
                         <div class="send-banance pt-0 mt-0">
                             <span class="mdr">Payment Description</span>
                             <div class="input-area">
-                                <input class="xxlr" onkeyup="CalculateBalance()" placeholder="eg. Payment for rent" type="text" name="description">
+                                <input class="xxlr" onkeyup="CalculateBalance()" placeholder="eg. Payment for rent" type="text" name="description" required>
                             
                             </div>
                         </div>
@@ -106,7 +104,7 @@
                             </li>
                         </ul>
                         <div class="footer-area mt-40">
-                            <a href="pay-step-1.html">Previous Step</a>
+                            <a href="{% url 'core_apps.core:search-account' %}">Previous Step</a>
                             <button type="submit" class="active" style="padding: 10px 30px; border-radius: 10px; background: blue; color: #fff;">Next</button>
                         </div>
                     </form>
