Feat: Add dynamic page titles

--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -1,6 +1,7 @@
 {% extends "partials/dashboard-base.html" %}
 {% load static %}
 {% load humanize %}
+{% block title %}Dashboard{% endblock %}
 {% block content %}
     <!-- Dashboard Section start -->
     <section class="dashboard-section body-collapse">
