--- a/templates/account/kyc-form.html
+++ b/templates/account/kyc-form.html
@@ -83,6 +83,7 @@
                 transition: all .25s ease-in;
             }
         </style>
+        {% block title %}KYC Registration Form{% endblock %}
     </head>
     <section class="dashboard-section body-collapse account">
         <div class="overlay pt-120">
