--- a/templates/payment_request/amount-request-completed.html
+++ b/templates/payment_request/amount-request-completed.html
@@ -1,6 +1,7 @@
 {% extends "partials/dashboard-base.html" %}
 {% load static %}
 {% load humanize %}
+{% block title %}Request Payment Completed{% endblock %}
 {% block content %}
     <!-- Dashboard Section start -->
     <section class="dashboard-section body-collapse pay step step-2 step-3 receive-3">
