--- a/templates/payment_request/search-users.html
+++ b/templates/payment_request/search-users.html
@@ -1,5 +1,6 @@
 {% extends "partials/dashboard-base.html" %}
 {% load static %}
+{% block title %}Search Users{% endblock %}
 {% block content %}
     <!-- Dashboard Section start -->
     <section class="dashboard-section body-collapse pay step">
