--- a/templates/payment_request/settlement-confirmation.html
+++ b/templates/payment_request/settlement-confirmation.html
@@ -1,6 +1,7 @@
 {% extends "partials/dashboard-base.html" %}
 {% load static %}
 {% load humanize %}
+{% block title %}Transfer Confirmation{% endblock %}
 {% block content %}
     <!-- Dashboard Section start -->
     <section class="dashboard-section body-collapse pay step step-2 step-3">
