--- a/templates/userauths/sign-up.html
+++ b/templates/userauths/sign-up.html
@@ -1,7 +1,6 @@
-
-
 {% extends 'partials/base.html' %}
 {% load static %}
+{% block title %}Sign Up{% endblock %}
 {% block content %}
       <!-- Login Reg start -->
       <section class="login-reg">
