--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,4 +1,5 @@
 {% extends "partials/base.html" %}
+{% block title %}Send and Receive Money{% endblock %}
 {% block content %}
 {% load static %}
     <!-- Banner Section start -->
