--- a/templates/credit_detail/credit-detail.html
+++ b/templates/credit_detail/credit-detail.html
@@ -1,6 +1,7 @@
 {% extends 'partials/dashboard-base.html' %}
 {% load static %}
 {% load humanize %}
+{% block title %}Credit Card Detail{% endblock %}
 {% block content  %}
 
     <!-- Dashboard Section start -->
