--- a/templates/partials/dashboard-base.html
+++ b/templates/partials/dashboard-base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SaroPay - Money Transfer and Online Payments Dashboard </title>
+    <title>{% block title %}{% endblock %} - SaroPay</title>
 
     <link rel="shortcut icon" href="{% static 'assets1/images/fav.png' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'assets1/css/bootstrap.min.css' %}">
