--- a/templates/payment_request/amount-request-confirmation.html
+++ b/templates/payment_request/amount-request-confirmation.html
@@ -1,6 +1,7 @@
 {% extends "partials/dashboard-base.html" %}
 {% load static %}
 {% load humanize %}
+{% block title %}Confirm Request Payment{% endblock %}
 {% block content %}
 
     <!-- Dashboard Section start -->
