--- a/templates/payment_request/settlement-completed.html
+++ b/templates/payment_request/settlement-completed.html
@@ -1,6 +1,7 @@
 {% extends "partials/dashboard-base.html" %}
 {% load static %}
 {% load humanize %}
+{% block title %}Transfer Conpleted{% endblock %}
 {% block content %}
 
     <!-- Dashboard Section start -->
