--- a/templates/transfer/amount-transfer.html
+++ b/templates/transfer/amount-transfer.html
@@ -1,6 +1,7 @@
 {% extends "partials/dashboard-base.html" %}
 {% load static %}
 {% load humanize %}
+{% block title %}Make Transfer{% endblock %}
 {% block content %}
 
     <!-- Dashboard Section start -->
