--- a/templates/userauths/sign-in.html
+++ b/templates/userauths/sign-in.html
@@ -1,5 +1,6 @@
 {% extends 'partials/base.html' %}
 {% load static %}
+{% block title %}Sign In{% endblock %}
 {% block content %}
       <!-- Login Reg start -->
       <section class="login-reg">
