--- a/templates/account/account.html
+++ b/templates/account/account.html
@@ -133,8 +133,8 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="single-input">
-                                                    <label for="lName">Marrital</label>
-                                                    <input type="text" id="lName" placeholder="Davis" value="{{ kyc.marrital_status|title }}">
+                                                    <label for="lName">Marital</label>
+                                                    <input type="text" id="lName" value="{{ kyc.marital_status|title }}">
                                                 </div>
                                             </div>
                                             <div class="col-md-4">
@@ -164,13 +164,13 @@
                                             <div class="col-md-4">
                                                 <div class="single-input">
                                                     <label for="lName">State</label>
-                                                    <input type="text" id="lName" placeholder="Davis" value="{{ kyc.state|title }}">
+                                                    <input type="text" id="lName" value="{{ kyc.state|title }}">
                                                 </div>
                                             </div>
                                             <div class="col-md-4">
                                                 <div class="single-input">
                                                     <label for="lName">City</label>
-                                                    <input type="text" id="lName" placeholder="Davis" value="{{ kyc.city|title }}">
+                                                    <input type="text" id="lName" value="{{ kyc.city|title }}">
                                                 </div>
                                             </div>
                                             <div class="col-md-6 ">
