--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,5 +1,5 @@
 {% extends "partials/base.html" %}
-{% block title %}Send and Receive Money{% endblock %}
+{% block title %}FinTech App{% endblock %}
 {% block content %}
 {% load static %}
     <!-- Banner Section start -->
