Chore: Fix bugs

--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -136,7 +136,7 @@
                                                     <div class="top_card">
                                                         <span class="visa">{{c.card_type|upper}}</span>
                                                         <div class="logo">
-                                                            <img src="{% static 'assets1/images/logo.png' %}" class="logo" alt="logo">
+                                                            <img src="{% static 'assets1/images/card-logo.png' %}" class="logo" alt="logo">
 
                                                         </div>
                                                     </div>
@@ -192,20 +192,7 @@
 
                                 </div>
                             </div>
-                            <div class="single-item">
-                                <div class="section-text d-flex align-items-center justify-content-between">
-                                    <h6>Payment Analytics</h6>
-                                    <div class="select-box">
-                                        <select>
-                                            <option>Monthly</option>
-                                            <option value="1">Jan</option>
-                                            <option value="2">Feb</option>
-                                            <option value="3">Mar</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div id="chart"></div>
-                            </div>
+                            
                           
                         </div>
                     </div>
