Chore: Fix bug in dashboard

--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -58,7 +58,7 @@
                             </div>
                             <div class="transactions-area mt-40">
                                 <div class="section-text">
-                                    <h5>Transactions</h5>
+                                    <h5>Transaction History</h5>
                                     <p>Updated every several minutes</p>
                                 </div>
                                 <div class="top-area d-flex align-items-center justify-content-between">
